Removed important on .hidden class to fix vertical line not showing on tablet-md and up. Hopefully this doesnt break something else

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -113,7 +113,7 @@ strong {
 }
 
 .hidden {
-  display: none !important;
+  display: none;
 }
 
 .floating-cta {
